# TheDojoMXBlog

./: .gitignore  HUGO_MANUAL.md  README.md  _config.yml  ideas-futuros-posts.md  migrate_drafts.py  migrate_posts.py  new_post.py  publish.py  requirements.txt  sugerencias-mejora-escritura.md
_authors/: alexs.md  (+4 more)
voice_papers/: .gitignore  AUDIO_GENERATION_IMPROVEMENTS_SUMMARY.md  COMPREHENSIVE_EXTRACTION_GUIDE.md  CONTENT_DETECTION_IMPROVEMENTS.md  CREDIT_TRACKING_UPDATE.md  ELEVENLABS_TTS_GUIDE.md  EXTRACTION_CONSISTENCY_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  IMPROVED_SYNTHESIS_DOCUMENTATION.md  MEJORAS_ESTABILIDAD.md  README.md  STYLE_GUIDE.md  SYNTHESIS_STORAGE_FIX.md  TECHNICAL_WRITER_README.md  TTS_OPTIMIZER_README.md  URL_EXTRACTION_IMPROVEMENTS.md  commands.sh  create_video.py  generate_audio.py  main.py  pyproject.toml  simple_tts_demo.py  technical_extraction_result.txt  test_comprehensive_extraction.py  test_concatenation_only.py  test_direct_input.txt  test_hook_improvement.py  test_improved_audio.py  test_new_defaults.py  test_pdf_extracted_text.txt  test_robust_extraction.py  test_simple.py  test_substack_extraction.py  test_summary_synthesis_storage.py  test_synthesis_methods.py  test_synthesis_simple.py  test_synthesis_workflow.py  test_technical_no_meta.py  test_tts_markdown_removal.py
voice_papers/docs/: GUIA_PROMPT_ELEVENLABS.md  TECHNICAL.md
voice_papers/examples/: comprehensive_extraction_example.py  run_example.py  sample_article.md  sample_paper.txt
voice_papers/voice_papers.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+3081 files in other folders)
